# OpenGL-Game-Base

./: CMakeCache.txt  CMakeLists.txt  Camera.h  Image_Generator.cpp  Makefile  Mesh.h  Model.h  Object_Rend.cpp  Object_Rend.h  Resource_Manager.cpp  Resource_Manager.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  cmake_install.cmake  image
Shaders/: Object_fShader.txt  Object_vShader.txt
